fix: fix background bug on mobile

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -20,8 +20,8 @@
     gap: 30px;
   }
   @media all and (max-width: 600px) {
-    margin: 30px shared.$mobile-margin;
-    padding-top: 75px;
+    margin: 0 shared.$mobile-margin 30px shared.$mobile-margin;
+    padding-top: 105px;
   }
   &__informations {
     display: flex;
